--- a/calamares.desktop
+++ b/calamares.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=Calamares Installer 
 GenericName=System Installer
-Comment=Qt5 based system installer for KaOS
+Comment=Qt5 based system installer
 Exec=sudo /usr/bin/calamares -d 
 Icon=installer
 StartupNotify=false
