--- a/settings.conf
+++ b/settings.conf
@@ -30,28 +30,28 @@ prepare:
 # which view module jobs should be enqueued. Job modules are also allowed.
 install:
 - partition
-- mnt
-- unsquashfs
+- mount
+- unpackfs
 - machineid
 - fstab
 - locale
 - keyboard
+- localecfg
 - initcpiocfg
 - initcpio
 - users
 - networkcfg
 - hwclock
 - services
-- kdm_sddm
-- usercfg
+#- kdm_sddm
+#- usercfg
 #- userkf5
-- driver_cleanup
-- nonfree_drivers
-- package_removal
-- grubconf
-- localecfg
-- bootldr
-- gummi_entries
+#- driver_cleanup
+#- nonfree_drivers
+#- packages
+- grubcfg
+- bootloader
+#- gummi_entries
 - umount
 
 # Phase 3 - postinstall.
