Add depends, update packages.conf

--- a/packages.conf
+++ b/packages.conf
@@ -25,9 +25,9 @@ backend: pacman
 # after the static list in the job configuration.
 #
 operations:
-  - install:
-      - kapudan
-      - octopi-notifier-qt5
+  - local_install:
+      - /opt/chakra/pkgs/kapudan-2014.10-1-x86_64.pkg.tar.xz
+      - /opt/chakra/pkgs/octopi-notifier-qt5-0.5.0.90-1-x86_64.pkg.tar.xz
 #  - remove:
 #      - pkg3
 #      - pkg4
