Change local_isntall to localInstall in packages.conf
Update checksums

--- a/packages.conf
+++ b/packages.conf
@@ -25,7 +25,7 @@ backend: pacman
 # after the static list in the job configuration.
 #
 operations:
-  - local_install:
+  - localInstall:
       - /opt/chakra/pkgs/kapudan-2015.03-1-x86_64.pkg.tar.xz
       - /opt/chakra/pkgs/octopi-notifier-qt5-0.6.0-1-x86_64.pkg.tar.xz
 #  - remove:
